package edu.sjsu.spring2026.group32.pong.model;

/**
 * Runtime state of a Pong match.
 */
public enum PongGameState {
    PAUSED,
    COUNTDOWN,
    PLAYING
}
